# wasm-to-oci

./: .golangci.yml  Gopkg.toml  LICENSE  Makefile  README.md  go.mod  go.sum  golangci.yml
.github/workflows/: ci.yml
cmd/: main.go  pull.go  push.go
ffi/: libwasm2oci.go
ffi/libwasm2oci_rust/: Cargo.toml  LICENSE
ffi/libwasm2oci_rust/src/: lib.rs  main.rs
pkg/oci/: mediatypes.go  pull.go  push.go  utils.go
pkg/tuf/: helpers.go  list.go  sign.go  verify.go
testdata/: canonicaljson.wasm  hello.wasm
