[package]
name = "libwasm2oci"
version = "0.1.0"
authors = ["Radu Matei <root@radu.sh>"]
edition = "2018"
description = "Rust API for pushing WebAssembly modules to OCI registries, using an FFI shim from Go."
license = "MIT"

include = [
    "**/*.rs",
    "Cargo.toml",

    # this crate depends on the shared object compiled from Go
    # so we're including the platform-specific compiled artifact
    # for Linux, MacOS, and Windows, together with the C header.
    "shared/*"
]

[dependencies]
libloading = "0.5"
